log
Mon, Mar 17, 2025  9:32:30 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Mon, Mar 17, 2025  8:43:43 PM: 
 tests:  0|5
total_score: 0/70
d9a15b6
Thu, Mar 20, 2025 12:29:03 PM: 
 tests:  0|5
total_score: 0/70
4e9d7e9
Thu, Mar 20, 2025 12:39:32 PM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:51:7: error: implicit declaration of function 'push_back'; did you mean 'pushBack'? [-Werror=implicit-function-declaration]
       push_back(L, element);
       ^~~~~~~~~
       pushBack
cc1.exe: all warnings being treated as errors
Compilation failed
7636c7b
Thu, Mar 20, 2025 12:46:01 PM: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:51:7: error: implicit declaration of function 'push_Back'; did you mean 'pushBack'? [-Werror=implicit-function-declaration]
       push_Back(L, element);
       ^~~~~~~~~
       pushBack
cc1.exe: all warnings being treated as errors
Compilation failed
64018b7
Thu, Mar 20, 2025  1:03:11 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c: In function 'test_crea_lista':
test.c:61:15: error: implicit declaration of function 'crea_lista'; did you mean 'create_lista'? [-Werror=implicit-function-declaration]
     List* L = crea_lista();
               ^~~~~~~~~~
               create_lista
test.c:61:15: error: initialization of 'List *' {aka 'struct List *'} from 'int' makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
Compilation failed
1ec9267
Thu, Mar 20, 2025  1:08:25 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:6:
arraylist.c:14:7: error: redefinition of 'create_list'
 List* create_list() {
       ^~~~~~~~~~~
In file included from test.c:5:
exercises.c:44:7: note: previous definition of 'create_list' was here
 List* create_list() {
       ^~~~~~~~~~~
test.c: In function 'test_crea_lista':
test.c:61:15: error: implicit declaration of function 'crea_lista'; did you mean 'create_list'? [-Werror=implicit-function-declaration]
     List* L = crea_lista();
               ^~~~~~~~~~
               create_list
test.c:61:15: error: initialization of 'List *' {aka 'struct List *'} from 'int' makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
Compilation failed
af4d516
Thu, Mar 20, 2025  1:10:06 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
508cd23
Thu, Mar 20, 2025  1:19:06 PM: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:64:18: error: expected expression before ';' token
    int sumList = ;
                  ^
Compilation failed
759e361
Thu, Mar 20, 2025  1:24:46 PM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
818d5dc
Thu, Mar 20, 2025  2:11:18 PM: 
 tests:  2|3
total_score: 20/70
4e72361
Thu, Mar 20, 2025  2:18:56 PM: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
3f397d7
Thu, Mar 20, 2025  2:43:27 PM: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:109:7: error: implicit declaration of function 'por'; did you mean 'pop'? [-Werror=implicit-function-declaration]
       por(P1);
       ^~~
       pop
cc1.exe: all warnings being treated as errors
Compilation failed
ec89215
Thu, Mar 20, 2025  2:46:15 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
27bbdf9
Thu, Mar 20, 2025  2:47:29 PM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|2
total_score: 40/70
f006745
Thu, Mar 20, 2025  2:52:24 PM: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 40/70
13ef42c
Thu, Mar 20, 2025  2:58:32 PM: 
 exercises.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c:123:7: error: redefinition of 'copia_pila'
 }void copia_pila(Stack* P1, Stack* P2) {
       ^~~~~~~~~~
exercises.c:103:6: note: previous definition of 'copia_pila' was here
 void copia_pila(Stack* P1, Stack* P2) {
      ^~~~~~~~~~
Compilation failed
df15a8f
Thu, Mar 20, 2025  2:59:45 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c:123:7: error: redefinition of 'copia_pila'
 }void copia_pila(Stack* P1, Stack* P2) {
       ^~~~~~~~~~
exercises.c:103:6: note: previous definition of 'copia_pila' was here
 void copia_pila(Stack* P1, Stack* P2) {
      ^~~~~~~~~~
Compilation failed
1ff3c3a
Thu, Mar 20, 2025  3:03:36 PM: 
 exercises.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c:123:7: error: redefinition of 'copia_pila'
 }void copia_pila(Stack* P1, Stack* P2) {
       ^~~~~~~~~~
exercises.c:103:6: note: previous definition of 'copia_pila' was here
 void copia_pila(Stack* P1, Stack* P2) {
      ^~~~~~~~~~
Compilation failed
26f5736
Thu, Mar 20, 2025  3:09:03 PM: 
 exercises.c | 38 --------------------------------------
 1 file changed, 38 deletions(-)
 tests:  3|2
total_score: 40/70
de5248c
Thu, Mar 20, 2025  3:11:32 PM: 
 exercises.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  3|2
total_score: 40/70
550f274
Thu, Mar 20, 2025  3:53:55 PM: 
 exercises.c | 25 +++++++++++++++----------
 1 file changed, 15 insertions(+), 10 deletions(-)
 tests:  3|2
total_score: 40/70
3897f25
Thu, Mar 20, 2025  3:55:47 PM: 
 exercises.c | 15 ++-------------
 1 file changed, 2 insertions(+), 13 deletions(-)
 tests:  4|1
total_score: 50/70
81c7dc2
Thu, Mar 20, 2025  4:02:50 PM: 
 exercises.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  4|1
total_score: 50/70
030e283
Thu, Mar 20, 2025  4:03:36 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
69007c8
Thu, Mar 20, 2025  4:04:56 PM: 
 exercises.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  7|1
total_score: 60/70
6520125
Thu, Mar 20, 2025  4:06:27 PM: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:151:8: error: unused variable 'resultado' [-Werror=unused-variable]
    int resultado = (top(stack) == NULL);
        ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f7102f7
Thu, Mar 20, 2025  4:07:37 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|1
total_score: 50/70
477f2db
Thu, Mar 20, 2025  4:08:14 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:151:8: error: unused variable 'resultado' [-Werror=unused-variable]
    int resultado = (top(stack) == NULL);
        ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3c18d5b
Thu, Mar 20, 2025  4:08:45 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
cde21b2
Thu, Mar 20, 2025  4:11:28 PM: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  7|1
total_score: 60/70
c6dda23
Thu, Mar 20, 2025  4:12:38 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
e3b1132
